logstash & kibana config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
   logstash:
     build:
       context: logstash/
+    volumes:
+      - ./logstash/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
     ports:
       - "5000:5000"
     networks:
@@ -29,6 +31,8 @@ services:
   kibana:
     build:
       context: kibana/
+    volumes:
+      - ./kibana/kibana.yml:/usr/share/kibana/config/kibana.yml:ro
     ports:
       - "5601:5601"
     networks:
