--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - ./60-elasticsearch.conf:/etc/sysctl.d/60-elasticsearch.conf:ro
       - ./elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
       - esdata1:/usr/share/elasticsearch/data
+      - ./elasticsearch/sysctl.conf:/etc/sysctl.conf:ro
     ports:
       - "9200:9200"
       - "9300:9300"
@@ -21,8 +22,11 @@ services:
       context: logstash/
     volumes:
       - ./logstash/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
+      - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
     ports:
       - "5000:5000"
+    environment:
+      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
     networks:
       - elk-stack-network
     depends_on:
@@ -46,5 +50,7 @@ volumes:
   esdata1:
     driver: local
 
+
 networks:
-  elk-stack-network:  
+  elk-stack-network:
+    driver: bridge
