--- a/logstash/logstash.yml
+++ b/logstash/logstash.yml
@@ -1,13 +1,4 @@
-input {
-  tcp {
-		port => 5000
-	}
-}
-
-## Add your filters / logstash plugins configuration here
-
-output {
-	elasticsearch {
-		hosts => "elasticsearch:9200"
-	}
-}
+http.host: "0.0.0.0"
+path.config: /usr/share/logstash/pipeline
+xpack.monitoring.enabled: false
+#xpack.monitoring.elasticsearch.url: http://elasticsearch:9200
