--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,13 +1,16 @@
 input {
-	tcp {
-		port => 5000
-	}
+  cloudwatch {
+    namespace => "AWS/EC2"
+    metrics => [ "CPUUtilization"]
+    filters => { "tag:Infrastructure" => "Backend Web" }
+    region => "ap-southeast-1"
+    access_key_id => "access_key"
+    secret_access_key => "secret_key"
+  }
 }
 
-## Add your filters / logstash plugins configuration here
-
 output {
-	elasticsearch {
-		hosts => "elasticsearch:9200"
-	}
+  elasticsearch {
+    hosts => "elasticsearch:9200"
+  }
 }
