--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,55 +2,47 @@ version: '2'
 
 services:
   elasticsearch:
-    build:
-      context: elasticsearch/
-    volumes:
-      - ./60-elasticsearch.conf:/etc/sysctl.d/60-elasticsearch.conf:ro
-      - ./elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
-      - esdata1:/usr/share/elasticsearch/data
-      - ./elasticsearch/sysctl.conf:/etc/sysctl.conf:ro
-    ports:
-      - "9200:9200"
-      - "9300:9300"
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.2.1
     environment:
-      ES_JAVA_OPTS: "-Xmx256m -Xms256m"
+      - discovery.type=single-node
+      - ES_JAVA_OPTS=-Xmx256m -Xms256m
+      - cluster.name=docker-cluster
+    ports:
+      - 9200:9200
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
+      - ./elasticsearch/sysctl.conf:/etc/sysctl.conf:ro
     networks:
-      - elk-stack-network
+      - esnetwork
 
   logstash:
-    build:
-      context: logstash/
+    image: adityahilman/logstash:cloudwatch-6.2.1
     volumes:
-      - ./logstash/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
       - ./logstash/pipeline:/usr/share/logstash/pipeline:ro
-    ports:
-      - "5000:5000"
-    environment:
-      LS_JAVA_OPTS: "-Xmx256m -Xms256m"
+      - ./logstash/config/logstash.yml:/usr/share/logstash/config/logstash.yml:ro
     networks:
-      - elk-stack-network
+      - esnetwork
     depends_on:
       - elasticsearch
 
   kibana:
-    build:
-      context: kibana/
+    image: docker.elastic.co/kibana/kibana:6.2.1
     volumes:
       - ./kibana/kibana.yml:/usr/share/kibana/config/kibana.yml:ro
     ports:
       - "5601:5601"
     networks:
-      - elk-stack-network
+      - esnetwork
     depends_on:
       - elasticsearch
 
-
-
 volumes:
-  esdata1:
+  esdata:
     driver: local
-
-
 networks:
-  elk-stack-network:
+  esnetwork:
     driver: bridge
