--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,16 +1,27 @@
 input {
-  cloudwatch {
-    namespace => "AWS/EC2"
-    metrics => [ "CPUUtilization"]
-    filters => { "tag:Infrastructure" => "Backend Web" }
-    region => "ap-southeast-1"
+  cloudwatch_logs {
+    log_group => [ "loggroupname" ]
+    log_group_prefix => "true"
     access_key_id => "access_key"
     secret_access_key => "secret_key"
+    region => "ap-southeast-1"
+    start_position => "end"
+    interval => "10"
   }
+
 }
 
 output {
   elasticsearch {
     hosts => "elasticsearch:9200"
   }
+  #stdout {
+#    codec => plain
+  #}
 }
+
+#output {
+  #stdout {
+  #  codec => json
+  #}
+#}
