--- a/logstash/Dockerfile
+++ b/logstash/Dockerfile
@@ -1,3 +1,4 @@
 FROM docker.elastic.co/logstash/logstash:6.2.1
 
 RUN bin/logstash-plugin install logstash-input-cloudwatch
+RUN bin/logstash-plugin install logstash-input-cloudwatch_logs
